--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,5 @@ title: Prapti Kansagra
 description: Data Scientist & AI/ML Enthusiast
 logo: Headshot.jpg
 show_downloads: true
-theme: jekyll-theme-cayman-dark
+theme: jekyll-theme-midnight
 
