--- a/_config.yml
+++ b/_config.yml
@@ -6,22 +6,18 @@
 
 
 title: Prapti Kansagra
-description: Data Scientist | AI/ML | Business Intelligence — turning messy data into decisions
-logo: Headshot.jpg
+description: Business Intelligence Analyst | Data Science | Analytics Portfolio
+theme: jekyll-theme-minimal
+
+logo: /Headshot.jpg
 show_downloads: true
-theme: jekyll-theme-midnight
 
-# Make sure GitHub Pages includes your assets folder
-include:
-  - assets
-
-# Markdown engine (GitHub-friendly, allows HTML blocks you’re using)
 markdown: kramdown
-kramdown:
-  input: GFM
 
-# CSS minification (you already had this idea)
-sass:
-  style: compressed
+plugins:
+  - jekyll-seo-tag
+
+email: pkansagra06@gmail.com
+linkedin: https://www.linkedin.com/in/praptikansagra
 
 
