--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 
 
 title: Prapti Kansagra
-description: Business Intelligence Analyst | Data Science | Analytics Portfolio
+description: BI/DA Analyst | Data Science | AI/ML | SQL • Python • Power BI • Tableau
 theme: jekyll-theme-minimal
 
 logo: /Headshot.jpg
-show_downloads: true
+show_downloads: false
 
 markdown: kramdown
 
@@ -18,6 +18,7 @@ plugins:
   - jekyll-seo-tag
 
 email: pkansagra06@gmail.com
-linkedin: https://www.linkedin.com/in/praptikansagra
+linkedin: https://www.linkedin.com/in/praptikansagra/
+
 
 
